--- a/exercise_3.Rmd
+++ b/exercise_3.Rmd
@@ -1,6 +1,6 @@
 ---
 title: 'Weekly Exercises #3'
-author: "Put your name here"
+author: "Xiang Li"
 output: 
   html_document:
     keep_md: TRUE
@@ -21,6 +21,7 @@ library(gardenR)       # for Lisa's garden data
 library(lubridate)     # for date manipulation
 library(ggthemes)      # for even more plotting themes
 library(geofacet)      # for special faceting with US map layout
+library(stringr)
 theme_set(theme_minimal())       # My favorite ggplot() theme :)
 ```
 
@@ -81,33 +82,66 @@ These exercises will reiterate what you learned in the "Expanding the data wrang
   1. Summarize the `garden_harvest` data to find the total harvest weight in pounds for each vegetable and day of week (HINT: use the `wday()` function from `lubridate`). Display the results so that the vegetables are rows but the days of the week are columns.
 
 ```{r}
-
+garden_harvest %>% 
+  mutate(day = wday(date), #When I do 'label = TRUE', the date will turns out Chinese, so I will delet this code.
+         weight_lbs = weight * 0.00220462) %>% 
+  group_by(vegetable, day) %>% 
+  summarize(total_harvest_wg = sum(weight_lbs)) %>% 
+  arrange(day) %>% 
+  pivot_wider(vegetable, names_from = day, values_from = total_harvest_wg)
 ```
 
   2. Summarize the `garden_harvest` data to find the total harvest in pound for each vegetable variety and then try adding the plot from the `garden_planting` table. This will not turn out perfectly. What is the problem? How might you fix it?
 
 ```{r}
-
+garden_harvest %>% 
+  group_by(vegetable, variety) %>% 
+  summarise(total_harvest = 0.00220462 * sum(weight)) %>% 
+  ungroup() %>% 
+  left_join(garden_planting,
+            by = c("vegetable", "variety"))
 ```
 
+There are some missing data, which the data in garden_harvest does not match the garden_planting.
+
   3. I would like to understand how much money I "saved" by gardening, for each vegetable type. Describe how I could use the `garden_harvest` and `garden_spending` datasets, along with data from somewhere like [this](https://products.wholefoodsmarket.com/search?sort=relevance&store=10542) to answer this question. You can answer this in words, referencing various join functions. You don't need R code but could provide some if it's helpful.
+
+
 
   4. Subset the data to tomatoes. Reorder the tomato varieties from smallest to largest first harvest date. Create a barplot of total harvest in pounds for each variety, in the new order.CHALLENGE: add the date near the end of the bar. (This is probably not a super useful graph because it's difficult to read. This is more an exercise in using some of the functions you just learned.)
 
 ```{r}
-
+garden_harvest %>% 
+  filter(vegetable == "tomatoes") %>% 
+  mutate(variety = fct_reorder(variety, date, min)) %>% 
+  group_by(variety) %>% 
+  summarise(weight_lbs = 0.00220462 * sum(weight)) %>% 
+  ggplot(aes(x = variety, y = weight_lbs)) +
+  geom_col() +
+  labs(x = "Weight (lbs)", y = "Variety",
+       title = "Total Harvest in Pounds for each Variety") +
+  theme(plot.title = element_text(hjust = 0.5, face = "bold", size = 14),
+        axis.text.x = element_text(angle = 45, hjust = 1, vjust = 1))
 ```
 
   5. In the `garden_harvest` data, create two new variables: one that makes the varieties lowercase and another that finds the length of the variety name. Arrange the data by vegetable and length of variety name (smallest to largest), with one row for each vegetable variety. HINT: use `str_to_lower()`, `str_length()`, and `distinct()`.
   
 ```{r}
-
+garden_harvest %>% 
+  mutate(lowercase_var = str_to_lower(variety)) %>% 
+  mutate(length_var_name = str_length(variety)) %>% 
+  group_by(vegetable, variety) %>% 
+  arrange(length_var_name) %>% 
+  distinct(variety) 
 ```
 
   6. In the `garden_harvest` data, find all distinct vegetable varieties that have "er" or "ar" in their name. HINT: `str_detect()` with an "or" statement (use the | for "or") and `distinct()`.
 
 ```{r}
-
+garden_harvest %>% 
+  mutate(name = str_detect(variety, "er|ar")) %>% 
+  filter(name == "TRUE") %>% 
+  distinct(vegetable, variety, .keep_all = FALSE)
 ```
 
 
