--- a/exercise_3.Rmd
+++ b/exercise_3.Rmd
@@ -106,7 +106,12 @@ There are some missing data, which the data in garden_harvest does not match the
 
   3. I would like to understand how much money I "saved" by gardening, for each vegetable type. Describe how I could use the `garden_harvest` and `garden_spending` datasets, along with data from somewhere like [this](https://products.wholefoodsmarket.com/search?sort=relevance&store=10542) to answer this question. You can answer this in words, referencing various join functions. You don't need R code but could provide some if it's helpful.
 
-
+• Summarize the garden harvest data by vegetable and find how many pounds of each vegetable was harvested.
+• Summarize the garden spending data to find amount spent by vegetable type.
+• Join those summarized tables together,
+• Extract information from the website about how much each vegetable type costs per pound (this part would take some time).
+• Join the cost data to the already joined data. Figure out how much money would have been spent by multiplying total harvest
+in pounds by cost per pound info from website. Subtract off amount spent.
 
   4. Subset the data to tomatoes. Reorder the tomato varieties from smallest to largest first harvest date. Create a barplot of total harvest in pounds for each variety, in the new order.CHALLENGE: add the date near the end of the bar. (This is probably not a super useful graph because it's difficult to read. This is more an exercise in using some of the functions you just learned.)
 
@@ -167,7 +172,7 @@ Here is the code to read in the data. We do this a little differently than usual
 
 ```{r cache=TRUE}
 data_site <- 
-  "https://www.macalester.edu/~dshuman1/data/112/2014-Q4-Trips-History-Data-Small.rds" 
+  "https://www.macalester.edu/~dshuman1/data/112/2014-Q4-Trips-History-Data.rds" 
 Trips <- readRDS(gzcon(url(data_site)))
 Stations<-read_csv("http://www.macalester.edu/~dshuman1/data/112/DC-Stations.csv")
 ```
@@ -237,14 +242,14 @@ The variable `client` describes whether the renter is a regular user (level `Reg
 ```{r}
 Trips %>% 
   mutate(time = hour(sdate) + minute(sdate)/60, 
-         day_on_week = wday(sdate, label=TRUE)) %>% 
+         day_on_week = wday(sdate)) %>% 
   ggplot(aes(x = time)) +
   geom_density(aes(fill = client),
                alpha = .5, 
                color=NA) +
   facet_wrap(vars(day_on_week))+
   scale_fill_viridis_d()+
-  labs(x = "Time of Day (1 = Sunday, 7 = Saturday)", y = "Density", 
+  labs(x = "Time of Day (1 = Sunday, 7 = Saturday)", y = "", 
        title = "Events vs Time of Day", fill = "Client") +
   theme_bw() +
   theme(plot.title = element_text(hjust = 0.5, face = "bold", size = 14))
@@ -260,11 +265,12 @@ Trips %>%
   geom_density(alpha = .5, color=NA, position = position_stack()) +
   facet_wrap(vars(day), scales = "free_y")+
   scale_fill_viridis_d()+
-  labs(x = "Time of Day (1 = Sunday, 7 = Saturday)", y = "Density", 
+  labs(x = "Time of Day (1 = Sunday, 7 = Saturday)", y = "", 
        title = "Events vs Time of Day", fill = "Client") +
   theme_bw() +
   theme(plot.title = element_text(hjust = 0.5, face = "bold", size = 14))
 ```
+The previous graph shows the direct comparison of casual and registered. We can see which has the higher renting rate during the same period of time, but we cannot observe the overall trend from the diagram. This graph shows the overall trend of the renting, which the density of casual clients is adding on the top of the registered clients. In this graph, we cannot see the individual comparison between two client.
   
   13. In this graph, go back to using the regular density plot (without `position = position_stack()`). Add a new variable to the dataset called `weekend` which will be "weekend" if the day is Saturday or Sunday and  "weekday" otherwise (HINT: use the `ifelse()` function and the `wday()` function from `lubridate`). Then, update the graph from the previous problem by faceting on the new `weekend` variable. 
   
@@ -279,7 +285,7 @@ Trips %>%
                color=NA) +
   facet_wrap(vars(weekend))+
   scale_fill_viridis_d()+
-  labs(x = "Time of Day", y = "Density",
+  labs(x = "Time of Day", y = "",
        title = "Events vs Time of Day", fill = "Client") +
   theme_bw() +
   theme(plot.title = element_text(hjust = 0.5, face = "bold", size = 14))
@@ -298,11 +304,12 @@ Trips %>%
                color=NA) +
   facet_wrap(vars(client))+
   scale_fill_viridis_d()+
-  labs(x = "Time of Day (1 = Sunday, 7 = Saturday)", y = "Density",
+  labs(x = "Time of Day", y = "",
        title = "Events vs Time of Day", fill = "Weekend") +
   theme_bw() +
   theme(plot.title = element_text(hjust = 0.5, face = "bold", size = 14))
 ```
+  The previous graph compares the clients in weekend and weekday. This graph compares the date of renting bikes for two different clients. One graph will not be better than the other, because these two graphs shows the two different types of information. 
   
 ### Spatial patterns
 
@@ -313,9 +320,9 @@ Trips %>%
   group_by(sstation) %>% 
   summarise(departure = n()) %>% 
   full_join(Stations, by=c("sstation" = "name")) %>% 
-  ggplot(aes(x = lat, y = long, color = departure)) +
+  ggplot(aes(x = long, y = lat, color = departure)) +
   geom_point() +
-  labs(x = "Latitude", y = "Longitude", color = "Number of departures",
+  labs(x = "Longitude", y = "Latitude", color = "Number of departures",
        title = "Number of Departure from Each Stattion") +
   theme_bw()+
   theme(plot.title = element_text(hjust = 0.5, face = "bold", size = 14))
@@ -333,10 +340,10 @@ Trips %>%
   ungroup(client) %>% 
   mutate(prop = departure/num_dep) %>% 
   select(sstation, lat, long, prop)%>%
-  ggplot(aes(x = lat, y = long, color = prop)) +
+  ggplot(aes(x = long, y = lat, color = prop)) +
   geom_point(shape = 19, alpha = .8) +
   scale_color_viridis_b() +
-  labs(x = "Latitude", y = "Longitude", color = "proportion",
+  labs(x = "Longitude", y = "Latitude", color = "proportion",
        title = "Number of Departure from Each Stattion") +
   theme_bw()+
   theme(plot.title = element_text(hjust = 0.5, face = "bold", size = 14))
@@ -351,7 +358,7 @@ In this section, we'll use the data from 2022-02-01 Tidy Tuesday. If you didn't 
 
   17. The final product of this exercise will be a graph that has breed on the y-axis and the sum of the numeric ratings in the `breed_traits` dataset on the x-axis, with a dot for each rating. First, create a new dataset called `breed_traits_total` that has two variables -- `Breed` and `total_rating`. The `total_rating` variable is the sum of the numeric ratings in the `breed_traits` dataset (we'll use this dataset again in the next problem). Then, create the graph just described. Omit Breeds with a `total_rating` of 0 and order the Breeds from highest to lowest ranked. You may want to adjust the `fig.height` and `fig.width` arguments inside the code chunk options (eg. `{r, fig.height=8, fig.width=4}`) so you can see things more clearly - check this after you knit the file to assure it looks like what you expected.
 
-```{r, fig.height=9, fig.width=4}
+```{r, fig.height=18, fig.width=9}
 breed_traits_total <- breed_traits %>% 
   select(-`Coat Type`, -`Coat Length`) %>% 
   pivot_longer(!Breed, names_to = "traits", values_to = "rating") %>% 
@@ -360,23 +367,63 @@ breed_traits_total <- breed_traits %>%
   filter(total_rating != 0) 
 breed_traits_total %>% 
   ggplot(aes(x = total_rating, y = fct_reorder(Breed, total_rating)))+
-  geom_point()+
+  geom_point(size = 2)+
   labs(x = "Total Rating", y = "Breed", 
        title = "Total Rating for Each Dog Breed")+
   theme_bw(base_size = 7) +
-  theme(plot.title = element_text(hjust = 0.5, face = "bold", size = 14))
+  theme(plot.title = element_text(hjust = 0.5, face = "bold", size = 14),
+        axis.title = element_text(size = 11))
 ```
 
   18. The final product of this exercise will be a graph with the top-20 dogs in total ratings (from previous problem) on the y-axis, year on the x-axis, and points colored by each breed's ranking for that year (from the `breed_rank_all` dataset). The points within each breed will be connected by a line, and the breeds should be arranged from the highest median rank to lowest median rank ("highest" is actually the smallest numer, eg. 1 = best). After you're finished, think of AT LEAST one thing you could you do to make this graph better. HINTS: 1. Start with the `breed_rank_all` dataset and pivot it so year is a variable. 2. Use the `separate()` function to get year alone, and there's an extra argument in that function that can make it numeric. 3. For both datasets used, you'll need to `str_squish()` Breed before joining. 
   
 ```{r}
-
+breed_rank_all %>% 
+  pivot_longer(cols = `2013 Rank`:`2020 Rank`,
+               names_to = "year",
+               values_to = "rank") %>% 
+  separate(year, into = c("year"), 
+           extra = "drop", 
+           convert = TRUE) %>% 
+  mutate(breed = str_squish(Breed)) %>% 
+  inner_join(breed_traits_total %>% 
+               slice_max(n = 20, order_by = total_rating) %>% 
+               mutate(breed = str_squish(Breed)), 
+             by = "breed") %>% 
+  ggplot(aes(x = year, y = fct_rev(fct_reorder(breed, rank, median)))) +
+  geom_line()+
+  geom_point(aes(color = rank))+
+  scale_color_viridis_b() +
+  labs(x = "Year", y = "Bread",
+       title = "Top 20 Dogs Ranking Over Time") +
+  theme_bw() +
+  theme(plot.title = element_text(hjust = 0.5, face = "bold", size = 14))
 ```
   
   19. Create your own! Requirements: use a `join` or `pivot` function (or both, if you'd like), a `str_XXX()` function, and a `fct_XXX()` function to create a graph using any of the dog datasets. One suggestion is to try to improve the graph you created for the Tidy Tuesday assignment. If you want an extra challenge, find a way to use the dog images in the `breed_rank_all` file - check out the `ggimage` library and [this resource](https://wilkelab.org/ggtext/) for putting images as labels.
   
 ```{r}
-
+breed_rank_all1<- breed_rank_all %>% 
+  pivot_longer(cols = `2013 Rank`:`2020 Rank`,
+               names_to = "year",
+               values_to = "rank") %>% 
+  separate(year, into = c("year"), 
+           extra = "drop", 
+           convert = TRUE) %>% 
+  mutate(breed = str_squish(Breed)) %>% 
+  filter(year == 2020) %>% 
+  inner_join(breed_traits_total %>%
+               slice_max(n = 30, order_by = total_rating) %>%
+               mutate(breed = str_squish(Breed)),
+             by = "breed") 
+breed_rank_all1 %>% 
+  ggplot(aes(x = total_rating, y = fct_reorder(breed, total_rating)))+
+  geom_point(aes(color = rank), shape = 18, size = 1.5)+
+  scale_color_viridis_b() +
+  theme_bw(base_size = 7) +
+  labs(x = "Total Rating", y = "Breed",
+       title = "Total Rating for Top 30 Dogs") +
+  theme(plot.title = element_text(hjust = 0.5, face = "bold", size = 14))
 ```
   
 ## GitHub link
@@ -389,6 +436,6 @@ This problem uses the data from the Tidy Tuesday competition this week, `kids`. 
 
   21. In this exercise, you are going to try to replicate the graph below, created by Georgios Karamanis. I'm sure you can find the exact code on GitHub somewhere, but **DON'T DO THAT!** You will only be graded for putting an effort into this problem. So, give it a try and see how far you can get without doing too much googling. HINT: use `facet_geo()`. The graphic won't load below since it came from a location on my computer. So, you'll have to reference the original html on the moodle page to see it.
   
-![](kids_data_karamanis.jpeg)
+
 
 **DID YOU REMEMBER TO UNCOMMENT THE OPTIONS AT THE TOP?**
